<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_drops"
        android:icon="@drawable/box_illustration_icon_vector2"
        android:title="@string/title_drop" />

    <item
        android:id="@+id/navigation_clothes"
        android:icon="@drawable/camiseta"
        android:title="@string/title_clothes" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/title_sell" />
    <item
        android:id="@+id/navigation_things"
        android:icon="@drawable/baseline_checkroom_24"
        android:title="@string/title_outfit" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_account" />

</menu>