<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account">

        <Preference
            app:key="account_perfil"
            app:title="Nombre de Usuario"
            app:icon="@drawable/acccccccc"
            app:fragment=""
            />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/desing">

        <ListPreference
            app:defaultValue="DEFAULT"
            app:entries="@array/dark_mode_entrie"
            app:entryValues="@array/dark_mode_values"
            app:key="settings_theme"
            app:icon="@drawable/baseline_settings_brightness_24"
            app:title="@string/dark_mode"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>