<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.things.ThingsFragment">

    <LinearLayout
        android:id="@+id/perfilUserAccount"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/options_row"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/default_user_foreground" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/baseline_arrow_right_24"
            android:gravity="center|left"
            android:padding="12dp"
            android:text="@string/user_profile" />
    </LinearLayout>

    <TextView
        android:id="@+id/changeMode"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/options_row"
        android:drawableStart="@drawable/baseline_settings_brightness_24"
        android:drawableEnd="@drawable/baseline_arrow_right_24"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toEndOf="@+id/perfilUserAccount"
        app:layout_constraintStart_toStartOf="@+id/perfilUserAccount"
        app:layout_constraintTop_toBottomOf="@+id/perfilUserAccount" />

    <TextView
        android:id="@+id/viewMyClothes"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/options_row"
        android:drawableStart="@drawable/camiseta_gris"
        android:drawableEnd="@drawable/baseline_arrow_right_24"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/my_cloths"
        app:layout_constraintEnd_toEndOf="@+id/changeMode"
        app:layout_constraintStart_toStartOf="@+id/changeMode"
        app:layout_constraintTop_toBottomOf="@+id/changeMode" />

    <TextView
        android:id="@+id/viewMyBuys"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/options_row"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/my_buys"
        android:drawableEnd="@drawable/baseline_arrow_right_24"
        android:drawableStart="@drawable/baseline_shopping_bag_24"
        app:layout_constraintEnd_toEndOf="@+id/viewMyClothes"
        app:layout_constraintStart_toStartOf="@+id/viewMyClothes"
        app:layout_constraintTop_toBottomOf="@+id/viewMyClothes" />

    <TextView
        android:id="@+id/viewMyOutfits"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/options_row"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/my_outfits"
        android:drawableStart="@drawable/baseline_checkroom_24"
        android:drawableEnd="@drawable/baseline_arrow_right_24"
        app:layout_constraintEnd_toEndOf="@+id/viewMyBuys"
        app:layout_constraintStart_toStartOf="@+id/viewMyBuys"
        app:layout_constraintTop_toBottomOf="@+id/viewMyBuys" />

    <TextView
        android:id="@+id/selectLanguage"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/options_row"
        android:drawableStart="@drawable/baseline_language_24"
        android:drawableEnd="@drawable/baseline_arrow_right_24"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/language"
        app:layout_constraintEnd_toEndOf="@+id/viewMyOutfits"
        app:layout_constraintStart_toStartOf="@+id/viewMyOutfits"
        app:layout_constraintTop_toBottomOf="@+id/viewMyOutfits" />
</androidx.constraintlayout.widget.ConstraintLayout>