<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="329dp"
        android:layout_height="164dp"
        android:layout_marginTop="52dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/droppy_logo_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameRegisterLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="140dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="@+id/userRegisterLay"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passConfirmRegisterLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:hint="@string/confirmpass"
        app:layout_constraintEnd_toEndOf="@+id/passRegisterLay"
        app:layout_constraintStart_toStartOf="@+id/passRegisterLay"
        app:layout_constraintTop_toBottomOf="@+id/passRegisterLay"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passConfirmRegister"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passRegisterLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:hint="@string/pass"
        app:layout_constraintEnd_toEndOf="@+id/emailRegisterLay"
        app:layout_constraintStart_toStartOf="@+id/emailRegisterLay"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterLay"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passRegister"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastnameRegisterLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lastname"
        app:layout_constraintEnd_toEndOf="@+id/userRegisterLay"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastnameRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userRegisterLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:hint="@string/user"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/nameRegisterLay"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegisterLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/userRegisterLay"
        app:layout_constraintStart_toStartOf="@+id/userRegisterLay"
        app:layout_constraintTop_toBottomOf="@+id/userRegisterLay"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/passConfirmRegisterLay"
        app:layout_constraintStart_toStartOf="@+id/passConfirmRegisterLay"
        app:layout_constraintTop_toBottomOf="@+id/passConfirmRegisterLay"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/havaAccount"
        android:textColor="@color/green_l1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>