<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addPhoto"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="201dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center_horizontal"
                android:text="@string/add_photo"
                android:textSize="16sp"
                app:icon="@drawable/baseline_add_photo_alternate_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagenesSeleccionadas"
                tools:ignore="MissingConstraints,RtlHardcoded" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tituloSellClothLay"
                style="?attr/textInputFilledStyle"
                android:layout_width="350dp"
                android:layout_height="75dp"
                android:layout_marginTop="16dp"
                android:hint="@string/title"
                app:helperText="@string/example_title"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/addPhoto"
                app:layout_constraintStart_toStartOf="@+id/addPhoto"
                app:layout_constraintTop_toBottomOf="@+id/addPhoto"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tituloSellCloth"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descripcionSellClothLay"
                style="?attr/textInputFilledStyle"
                android:layout_width="350dp"
                android:layout_height="75dp"
                android:hint="@string/description"
                app:helperText="@string/example_description"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/tituloSellClothLay"
                app:layout_constraintStart_toStartOf="@+id/tituloSellClothLay"
                app:layout_constraintTop_toBottomOf="@+id/tituloSellClothLay"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descripcionSellCloth"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/marcaSellCloth"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_corners"
                android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                android:hint="@string/brand"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/descripcionSellClothLay"
                app:layout_constraintStart_toStartOf="@+id/descripcionSellClothLay"
                app:layout_constraintTop_toBottomOf="@+id/descripcionSellClothLay" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/brand"
                app:layout_constraintBottom_toTopOf="@+id/marcaSellCloth"
                app:layout_constraintStart_toStartOf="@+id/marcaSellCloth" />

            <TextView
                android:id="@+id/categoriaSellCloth"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_corners"
                android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                android:hint="@string/category"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/marcaSellCloth"
                app:layout_constraintStart_toStartOf="@+id/marcaSellCloth"
                app:layout_constraintTop_toBottomOf="@+id/marcaSellCloth"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/category"
                app:layout_constraintBottom_toTopOf="@+id/categoriaSellCloth"
                app:layout_constraintStart_toStartOf="@+id/categoriaSellCloth" />

            <TextView
                android:id="@+id/estadoSellCloth"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_corners"
                android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                android:hint="@string/state"
                android:padding="12dp"

                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/categoriaSellCloth"
                app:layout_constraintStart_toStartOf="@+id/categoriaSellCloth"
                app:layout_constraintTop_toBottomOf="@+id/categoriaSellCloth"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/state"
                app:layout_constraintBottom_toTopOf="@+id/estadoSellCloth"
                app:layout_constraintStart_toStartOf="@+id/estadoSellCloth" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/size"
                app:layout_constraintBottom_toTopOf="@+id/sizeList"
                app:layout_constraintStart_toStartOf="@+id/sizeList" />

            <TextView
                android:id="@+id/sizeList"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_corners"
                android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
                android:hint="@string/size"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/estadoSellCloth"
                app:layout_constraintStart_toStartOf="@+id/estadoSellCloth"
                app:layout_constraintTop_toBottomOf="@+id/estadoSellCloth" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagenesSeleccionadas"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pricelothLay"
                style="?attr/textInputFilledStyle"
                android:layout_width="350dp"
                android:layout_height="75dp"
                android:layout_marginTop="24dp"
                android:hint="@string/price"
                app:helperText="@string/price_title"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/sizeList"
                app:layout_constraintStart_toStartOf="@+id/sizeList"
                app:layout_constraintTop_toBottomOf="@+id/sizeList"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceSellCloth"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addCloth"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="201dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:foregroundGravity="center_horizontal"
                android:text="@string/add_product"
                android:textSize="16sp"
                app:icon="@drawable/camiseta_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pricelothLay"
                app:layout_constraintStart_toStartOf="@+id/pricelothLay"
                app:layout_constraintTop_toBottomOf="@+id/pricelothLay"
                tools:ignore="MissingConstraints,RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
