<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="UnknownId">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="330dp"
        android:layout_height="139dp"
        android:layout_marginTop="160dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/droppy_logo_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/passStyle"
        app:layout_constraintStart_toStartOf="@+id/passStyle"
        app:layout_constraintTop_toBottomOf="@+id/passStyle"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/notHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/noHaveLogin"
        android:textColor="@color/green_official"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/pass"

        app:layout_constraintEnd_toEndOf="@+id/userStyle"
        app:layout_constraintStart_toStartOf="@+id/userStyle"
        app:layout_constraintTop_toBottomOf="@+id/userStyle"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>